--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,8 @@
     }
   ],
   "rules": {
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "error",
     "import/extensions": [
       "error",
       "ignorePackages",
