--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rimraf ./build && tsc",
     "dev": "ts-node-dev --inspect --respawn --transpile-only src/interfaces/http/index.ts",
     "start": "node -r dotenv/config build/interfaces/http/index.js",
-    "build-and-start": "yarn build && node ./build/interfaces/http/index.js"
+    "build-and-start": "yarn build && node ./build/interfaces/http/index.js",
+    "db:migrate": "NODE_ENV=development npx sequelize-cli db:migrate"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +31,7 @@
     "jest": "^25.2.7",
     "jest-html-reporters": "^1.2.1",
     "rimraf": "^3.0.2",
+    "sequelize-cli": "^6.2.0",
     "ts-jest": "^25.3.1",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
