--- a/.env
+++ b/.env
@@ -1,1 +1,11 @@
-APP_PORT=4000
+APP_PORT=4001
+APP_ENV=development
+
+DB_MAIN_DIALECT=mysql
+DB_MAIN_HOST=127.0.0.1
+DB_MAIN_PORT=3306
+DB_MAIN_DATABASE=kasmaji
+DB_MAIN_USERNAME=root
+DB_MAIN_PASSWORD=admin123
+DB_MAIN_TIMEZONE=+07:00
+DB_MAIN_LOGGING=true
