--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve('src/driver/database', 'config.json'),
+  'config': path.resolve('src/driver/database', 'config.js'),
   'models-path': path.resolve('src/driver/database', 'models'),
   'seeders-path': path.resolve('src/driver/database', 'seeders'),
   'migrations-path': path.resolve('src/driver/database', 'migrations')
