--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
-APP_PORT=4000
+APP_PORT=4001
+APP_ENV=development
+APP_URI=http://127.0.0.1
 
-DB_MAIN_DIALECT=
-DB_MAIN_HOST=
-DB_MAIN_PORT=
-DB_MAIN_DATABASE=
-DB_MAIN_USERNAME=
-DB_MAIN_PASSWORD=
-DB_MAIN_TIMEZONE=
-DB_MAIN_LOGGING=
+DB_MAIN_DIALECT=mysql
+DB_MAIN_HOST=127.0.0.1
+DB_MAIN_PORT=3306
+DB_MAIN_DATABASE=kasmaji
+DB_MAIN_USERNAME=root
+DB_MAIN_PASSWORD=admin123
+DB_MAIN_TIMEZONE=+07:00
+DB_MAIN_LOGGING=true
