--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.4",
     "@types/jest": "^25.2.1",
+    "@types/multer": "^1.4.5",
     "@types/ramda": "^0.27.32",
     "@types/require-dir": "^1.0.1",
     "@types/sequelize": "^4.28.9",
@@ -43,6 +44,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "ramda": "^0.27.1",
