--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ APP_ENV=development
 APP_URI=http://127.0.0.1/
 
 DB_MAIN_DIALECT=mysql
-DB_MAIN_HOST=127.0.0.1
+DB_MAIN_HOST=sql12.freemysqlhosting.net	
 DB_MAIN_PORT=3306
-DB_MAIN_DATABASE=kasmaji
-DB_MAIN_USERNAME=root
-DB_MAIN_PASSWORD=admin123
+DB_MAIN_DATABASE=sql12385948
+DB_MAIN_USERNAME=sql12385948
+DB_MAIN_PASSWORD=5JhXsYjQpX
 DB_MAIN_TIMEZONE=+07:00
 DB_MAIN_LOGGING=true
