--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@ APP_ENV=development
 APP_URI=http://127.0.0.1/
 
 DB_MAIN_DIALECT=mysql
-DB_MAIN_HOST=sql12.freemysqlhosting.net	
+DB_MAIN_HOST=eu-cdbr-west-03.cleardb.net
 DB_MAIN_PORT=3306
-DB_MAIN_DATABASE=sql12385948
-DB_MAIN_USERNAME=sql12385948
-DB_MAIN_PASSWORD=5JhXsYjQpX
+DB_MAIN_DATABASE=heroku_1513098b988da7e
+DB_MAIN_USERNAME=bead799468450b
+DB_MAIN_PASSWORD=98f52ff2
 DB_MAIN_TIMEZONE=+07:00
 DB_MAIN_LOGGING=true
