--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.4",
+    "@types/helmet": "^4.0.0",
     "@types/jest": "^25.2.1",
     "@types/multer": "^1.4.5",
     "@types/ramda": "^0.27.32",
@@ -40,10 +42,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "change-case": "^4.1.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.9.0",
+    "helmet": "^4.3.1",
     "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
