--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Kasmaji API",
   "main": "index.js",
+  "engines": {
+    "node": "12.20.0"
+  },
   "scripts": {
     "test": "jest --detectOpenHandles --colors",
     "lint": "eslint src/*/*/*/*/** tests/** --fix --cache",
@@ -10,7 +13,9 @@
     "dev": "NODE_ENV=development ts-node-dev --inspect --respawn --transpile-only src/interfaces/http/index.ts",
     "start": "node -r dotenv/config build/interfaces/http/index.js",
     "build-and-start": "yarn build && node ./build/interfaces/http/index.js",
-    "db:migrate": "NODE_ENV=development npx sequelize-cli db:migrate"
+    "db:migrate": "NODE_ENV=development npx sequelize-cli db:migrate",
+    "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
+    "heroku-postbuild": "export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production;"
   },
   "author": "",
   "license": "ISC",
