--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "node -r dotenv/config build/interfaces/http/index.js",
     "build-and-start": "yarn build && node ./build/interfaces/http/index.js",
     "db:migrate": "NODE_ENV=development npx sequelize-cli db:migrate",
-    "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
+    "heroku-prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development yarn install --only=dev --dev",
     "heroku-postbuild": "export NPM_CONFIG_PRODUCTION=true; export NODE_ENV=production;"
   },
   "author": "",
